crates/server/tests/grammar/snapshots/r#mod__grammar__alpha060__union_type_return_type.snap
---
source: crates/server/tests/grammar/alpha060.rs
assertion_line: 540
expression: parse_unwrap(&tokenize(input))
---
[
    (
        FunctionDefinition(
            [],
            (
                false,
                5..34,
            ),
            (
                "fun",
                5..8,
            ),
            (
                "foo",
                9..12,
            ),
            [],
            Some(
                (
                    Int | Text,
                    16..26,
                ),
            ),
            [],
        ),
        5..34,
    ),
]
