crates/server/tests/grammar/snapshots/r#mod__grammar__alpha060__union_type_return_type_with_failable.snap
---
source: crates/server/tests/grammar/alpha060.rs
assertion_line: 549
expression: parse_unwrap(&tokenize(input))
---
[
    (
        FunctionDefinition(
            [],
            (
                false,
                5..35,
            ),
            (
                "fun",
                5..8,
            ),
            (
                "foo",
                9..12,
            ),
            [],
            Some(
                (
                    Int | Text?,
                    16..27,
                ),
            ),
            [],
        ),
        5..35,
    ),
]
