crates/server/tests/grammar/snapshots/r#mod__grammar__alpha060__union_type_with_null.snap
---
source: crates/server/tests/grammar/alpha060.rs
assertion_line: 486
expression: parse_unwrap(&tokenize(input))
---
[
    (
        FunctionDefinition(
            [],
            (
                false,
                5..35,
            ),
            (
                "fun",
                5..8,
            ),
            (
                "foo",
                9..12,
            ),
            [
                (
                    Typed(
                        (
                            false,
                            13..13,
                        ),
                        (
                            "x",
                            13..14,
                        ),
                        (
                            Int | Null,
                            16..26,
                        ),
                    ),
                    13..26,
                ),
            ],
            None,
            [],
        ),
        5..35,
    ),
]
